objects/Apttus_QPConfig__ProposalProductAttributeValue__c.object
<CustomObject>
    <description>Represents the attribute values for a product class in a proposal line item</description>
    <fields>
        <fullName>APTS_PPC_Ad_Costs__c</fullName>
        <label>PPC Ad Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_PPC_Advertising__c</fullName>
        <label>PPC Management Fee*</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_PPC_Landing_Pages__c</fullName>
        <label>PPC Landing Pages</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_PPC_Language_Selection__c</fullName>
        <label>PPC Language Selection</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Español</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_PPC_Mgmt_Fee_Override__c</fullName>
        <label>PPC Management Fee Override %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_PPC_Rounded_Value__c</fullName>
        <label>PPC Value to Add to Contract</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_PPC_Type__c</fullName>
        <label>PPC Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New PPC</fullName>
                </value>
                <value>
                    <fullName>Existing PPC (Increase the Monthly Spend)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_PPC_Value__c</fullName>
        <label>Requested PPC Amount</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_PPC_Website_Selection__c</fullName>
        <label>PPC Website Selection</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FirmSite or FindLaw Landing Page Hosting</fullName>
                </value>
                <value>
                    <fullName>Third Party Site (No Landing Pages)</fullName>
                </value>
                <value>
                    <fullName>LawInfo</fullName>
                </value>
                <value>
                    <fullName>FirmSite</fullName>
                    <isActive>false</isActive>
                    <label>FirmSite</label>
                </value>
                <value>
                    <fullName>Live Site (Non FirmSite)</fullName>
                    <isActive>false</isActive>
                    <label>Live Site (Non FirmSite)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Priced_Number_of_Attorneys__c</fullName>
        <label>Priced Number of Attorneys</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Pricing_Qty_Type__c</fullName>
        <label>Pricing Quantity Type (UoM)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Pricing_Quantity__c</fullName>
        <label>Pricing Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Delivery__c</fullName>
        <label>Product Delivery</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Download</fullName>
                </value>
                <value>
                    <fullName>eBook</fullName>
                </value>
                <value>
                    <fullName>Online/Web</fullName>
                </value>
                <value>
                    <fullName>Media CD</fullName>
                </value>
                <value>
                    <fullName>Live/In Person/Virtual</fullName>
                </value>
                <value>
                    <fullName>Print</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Renewal_Price__c</fullName>
        <label>Renewal Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Total_Number_of_Points__c</fullName>
        <label>Total Number of Points</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__BillingOffsetDays__c</fullName>
        <description>The number of days to delay the billing start date</description>
        <inlineHelpText>The number of days to delay the billing start date</inlineHelpText>
        <label>Billing Offset (Days)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__Color__c</fullName>
        <description>Product color</description>
        <label>Color</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Black</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Pink</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__LineItemId__c</fullName>
        <description>ID of the associated proposal line item</description>
        <label>Line Item</label>
        <referenceTo>Apttus_Proposal__Proposal_Line_Item__c</referenceTo>
        <relationshipLabel>Product Attribute Values</relationshipLabel>
        <relationshipName>ProductAttributeValues</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__Vendor__c</fullName>
        <description>Product Vendor</description>
        <label>Vendor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purchase_Option_Bundle_Print__c</fullName>
        <label>Purchase Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ship &amp; Entitle - APP</fullName>
                </value>
                <value>
                    <fullName>Ship &amp; Entitle Sub</fullName>
                </value>
                <value>
                    <fullName>Sub Only APP</fullName>
                </value>
                <value>
                    <fullName>Sub Only</fullName>
                </value>
                <value>
                    <fullName>Ship &amp; Entitle Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SCS_Print_Purchase_Options__c</fullName>
        <label>Print Purchase Options</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ship &amp; Enter Sub APP</fullName>
                </value>
                <value>
                    <fullName>Ship &amp; Enter Sub</fullName>
                </value>
                <value>
                    <fullName>Sub Only APP</fullName>
                </value>
                <value>
                    <fullName>Sub Only</fullName>
                </value>
                <value>
                    <fullName>Fill-Up &amp; Enter Sub APP</fullName>
                </value>
                <value>
                    <fullName>Fill-Up &amp; Enter Sub</fullName>
                </value>
                <value>
                    <fullName>Fill-Up</fullName>
                </value>
                <value>
                    <fullName>Ship Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_Prof_Binder_Softbound__c</fullName>
        <label>Product Delivery Binder|Softbound</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Prof_Bundle__c</fullName>
        <label>Product Delivery Bundle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Prof_Download_Online__c</fullName>
        <label>Product Delivery Download|Online/Interne</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Prof_Download__c</fullName>
        <label>Product Delivery Download</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Prof_HTML_Onln_Word_Eflex__c</fullName>
        <label>Product Delivery HTML|Online|Word|E-flex</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Prof_HTML__c</fullName>
        <label>Product Delivery HTML</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Prof_Live_In_Person_Virtual__c</fullName>
        <label>Product Delivery Live/In Person/Virtual</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Prof_Newsletter_eBook__c</fullName>
        <label>Product Delivery Newsletter|eBook</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Prof_PDF_Softbound__c</fullName>
        <label>Product Delivery PDF|Softbound</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Prof_PDF__c</fullName>
        <label>Product Delivery PDF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Prof_Product_Delivery_Online_Intern__c</fullName>
        <label>Product Delivery Online/Internet</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Online/Internet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_Prof_Product_Delivery_Word__c</fullName>
        <label>Product Delivery Word</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Prof_Softbound__c</fullName>
        <label>Product Delivery Softbound</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Prof_Softbound_eBook__c</fullName>
        <label>Product Delivery Softbound|eBook</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Prof_eBook__c</fullName>
        <label>Product Delivery eBook</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>eBook</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_Prof_e_Flex_Online_Internet__c</fullName>
        <label>Product Delivery E-flex/Online</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Prof_e_Flex__c</fullName>
        <label>Product Delivery e-Flex</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eBook_Purchase_Options__c</fullName>
        <label>Purchase Options</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>APP</fullName>
                </value>
                <value>
                    <fullName>Entitle and Charge</fullName>
                </value>
                <value>
                    <fullName>One Time Sale</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Proposal Product Attribute Value</label>
    <nameField>
        <displayFormat>VL-{0000000000}</displayFormat>
        <label>Attribute Value Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proposal Product Attribute Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>